methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:31: error: Unmatched closing brace '}' ignored here
}
^